# reversi_rs

./: Cargo.toml  Makefile  README.md
src/: bitboard.rs  book.rs  cmds.rs  evaluator.rs  main.rs  parse.rs  search.rs  transposition.rs
