[package]
name = "reversi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
regex = "1.8.4"
rand = "0.8.5"
tailcall = "0.1.6"
# add once_cell
once_cell = "1.18.0"

[profile.release]
opt-level = 3
codegen-units = 1